<resources>
    <!--Global Strings-->
    <string name="app_name">Reduke</string>
    <string name="hint_Reduke">Reduke</string>
    <string name="disc_RedukeLogo">Reduke Logo</string>

    <!--User-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="title_Register">Reduke User Register</string>
    <string name="hint_SucessfullRegister">Registration Successful!</string>
    <string name="err_UserExists">User with the entered email already exists!</string>
    <string name="deletePrompt">Are you sure you want to delete this Post?</string>
    <string name="registerTitle">Register</string>
    <string name="toast_InvalidCreds">Incorrect Email or Password!</string>
    <string name="promptSignUp">Not Signed Up Yet? Sign Up Below</string>
    <string name="logoutPrompt">Are you sure you would like to log out?</string>
    <string name="title_splashscreen">Splashscreen</string>
    <string name="title_RedukeLogin">Post Login</string>
    <string name="logoutTitle">Logout</string>

    <!--Post-->
    <string name="hint_postTitle">Post Title</string>
    <string name="hint_postDescription">Post Text </string>
    <string name="title_editPost">Edit Post</string>
    <string name="hint_EnterPostTitle">Please Fill In All Above Fields!</string>
    <string name="infoTag">Information</string>
    <string name="title_PostList">Feed</string>
    <string name="title_PostAdd">Add Post</string>
    <string name="button_addPost">Add Post</string>
    <string name="button_savePost">Save Post</string>
    <string name="button_deleteReduke">Delete Post</string>
    <string name="menu_addPost">Add</string>
    <string name="menu_cancel_Post">Cancel</string>

    <!--Settings-->
    <string name="title_Settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settingsTitle">Settings</string>
    <string name="changeUserTitle">Change Credentials</string>
    <string name="changeUserName">Name</string>
    <string name="button_SaveEditUser">Save</string>
    <string name="changeUserEmail">Email</string>
    <string name="changePassword">Password</string>
    <string name="confirmUserEditSave">Are you sure you want to edit your credentials?</string>
    <string name="unsavedPrompt">Are you sure you dont want to save this Post?</string>
    <string name="changePasswordConfirm">Confirm New Password</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="hint_EnterAllFields">Please Enter All Fields!</string>
    <string name="toast_AuthFail">Email or Password not found, please try again.</string>
    <string name="title_of_the_post_card">Title of the Post</string>
    <string name="user_who_created_the_post_card">User who created the post</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sort_feed">sort feed</string>
    <string name="add_user">Add User</string>
    <string name="splashscreen_image">Splashscreen Image</string>
    <string name="example_text">Luke Halley did something</string>
    <string name="exampleowner">luke123halley</string>
    <string name="examplepoints">342 points</string>
    <string name="zerocomments">0 comments</string>
    <string name="defaulttime">7 hours ago</string>
    <string name="defaultsubreddit">askreddit</string>
    <string name="point">·</string>
    <string name="upvote_button">upvote button</string>
    <string name="favourite_button">favourite button</string>
    <string name="menu_on_card">menu on card</string>
    <string name="downvote_button">downvote button</string>
    <string name="subredditTag">Subreddit</string>
    <string name="button_addImageFromGallery">CHOOSE IMAGE</string>
    <string name="button_addImageFromCamera">TAKE PHOTO</string>
    <string name="imageTag">Choose Image</string>
    <string name="hint_postURL">URL</string>
    <string name="the_post_s_image">The Post\'s Image</string>
    <string name="select_redukeImage">Select Post Image</string>
    <string name="title_ImagePost">Image Post</string>
    <string name="title_LinkPost">Add Link Pos</string>
    <string name="toast_GoogleAuthFail">Sign In With Google Failed!</string>
    <string name="yourPosts">Your Posts</string>
    <string name="feed">Feed</string>
    <string name="edit_card_menu">Edit</string>
    <string name="delete_card_menu">Delete</string>


    <!--Subreddits-->
    <string-array name="subreddits_menu">
        <item>All</item>
        <item>Android</item>
        <item>Education</item>
        <item>Fashion</item>
        <item>Funny</item>
        <item>Ireland</item>
        <item>Music</item>
        <item>News</item>
        <item>Photography</item>
        <item>Technology</item>
        <item>Video</item>
    </string-array>

    <string-array name="subreddits">
        <item>Android</item>
        <item>Education</item>
        <item>Fashion</item>
        <item>Funny</item>
        <item>Ireland</item>
        <item>Music</item>
        <item>News</item>
        <item>Photography</item>
        <item>Technology</item>
        <item>Video</item>
    </string-array>

</resources>